--- a/moviestore2110_22876/moviestore2110_22876.csproj
+++ b/moviestore2110_22876/moviestore2110_22876.csproj
@@ -230,16 +230,46 @@
     <Content Include="home.aspx" />
     <Content Include="homepage.aspx" />
     <Content Include="images\1.jpg" />
+    <Content Include="images\1917.jpg" />
     <Content Include="images\2.jpg" />
     <Content Include="images\3.jpg" />
     <Content Include="images\avatar-163725.jpg" />
+    <Content Include="images\avatar.jpg" />
+    <Content Include="images\avatar2.png" />
+    <Content Include="images\avatar3.png" />
+    <Content Include="images\avatar4.png" />
+    <Content Include="images\avatar5.jpg" />
     <Content Include="images\bell.png" />
+    <Content Include="images\blade.jpg" />
+    <Content Include="images\brave.jpg" />
     <Content Include="images\calendar.png" />
+    <Content Include="images\deer.jpg" />
+    <Content Include="images\Delete.png" />
     <Content Include="images\email.png" />
+    <Content Include="images\game.jpg" />
+    <Content Include="images\ghost.jpg" />
+    <Content Include="images\grey.jpg" />
+    <Content Include="images\harry.jpg" />
+    <Content Include="images\home.jpg" />
+    <Content Include="images\Home.png" />
+    <Content Include="images\joker.jpg" />
+    <Content Include="images\jumanji.jpg" />
+    <Content Include="images\Last.png" />
+    <Content Include="images\lion.jpg" />
     <Content Include="images\mac.jpg" />
+    <Content Include="images\moonlight.jpg" />
+    <Content Include="images\Next.png" />
+    <Content Include="images\OK.png" />
+    <Content Include="images\Previous.png" />
     <Content Include="images\register.png" />
+    <Content Include="images\replicas.jpg" />
+    <Content Include="images\s2.jpg" />
+    <Content Include="images\samp1.jpg" />
+    <Content Include="images\samp2.jpg" />
     <Content Include="images\smiley.jpg" />
     <Content Include="images\social.png" />
+    <Content Include="images\tarzan.jpg" />
+    <Content Include="images\titanic.jpg" />
     <Content Include="register.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -527,6 +557,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="labs\" />
+    <Folder Include="tutorials\week6\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
