--- a/moviestore2110_22876/Web.config
+++ b/moviestore2110_22876/Web.config
@@ -4,6 +4,19 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<system.net>
+		<mailSettings>
+			<smtp deliveryMethod="Network" from="darrenalassoo@gmail.com">
+				<network
+				host="smtp.gmail.com"
+				port="587"
+				enableSsl="true"
+				userName="darrenalassoo@gmail.com "
+				password="cdrbrbxixpubofmy"
+				defaultCredentials="true"/>
+			</smtp>
+		</mailSettings>
+	</system.net>
 	<system.web>
 		<compilation debug="true" targetFramework="4.8.1" />
 		<httpRuntime targetFramework="4.8.1" />
@@ -21,11 +34,8 @@
 		</pages>
 	</system.web>
 	<connectionStrings>
-		<add name="MoviesCS"
-connectionString="Data Source=(LocalDb)\MSSQLLocalDB;
- AttachDbFilename=|DataDirectory|\moviesDB.mdf;
-Integrated Security=True"
- providerName="System.Data.SqlClient"/>
+		<add name="MoviesCS" connectionString="Data Source=LEGION\SQLEXPRESS; Initial Catalog=moviesDB; Integrated Security=True" providerName="System.Data.SqlClient" />
+
 	</connectionStrings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
